--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -180,6 +180,7 @@
   <script src="/html/theme-cube/components/pw-bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
   <script src="/html/theme-cube/components/select2/dist/js/select2.min.js"></script>
   <script src="/html/theme-cube/components/PACE/pace.min.js"></script>
+  <script src="/html/theme-cube/components/lightbox/ekko-lightbox.js"></script>
   <script src="/html/theme-cube/js/tk-cube.js"></script>
 
   <!-- CodeMirror -->
