--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -15,6 +15,7 @@
   <link href="/html/theme-cube/components/jquery-ui/jquery-ui.min.css" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="/html/theme-cube/components/pw-bootstrap-timepicker/css/timepicker.css" />
   <link rel="stylesheet" type="text/css" href="/html/theme-cube/components/select2/dist/css/select2.min.css" />
+  <link rel="stylesheet" type="text/css" href="/html/theme-cube/components/lightbox/ekko-lightbox.css" />
 
   <link rel="stylesheet" type="text/css" href="/vendor/ttek/tk-base/assets/js/codemirror/lib/codemirror.css" />
   <link rel="stylesheet" type="text/css" href="/vendor/ttek/tk-base/assets/js/codemirror/theme/idea.css" />
