--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -201,6 +201,7 @@
   <script src="/vendor/ttek/tk-form/js/dualListBox/jquery.dualListBox.js"></script>
   <script src="/vendor/ttek/tk-form/js/fileinput/jquery.tkFileInput.js"></script>
   <script src="/vendor/ttek/tk-form/js/jquery.tkInputLock.js"></script>
+  <script src="/vendor/ttek/tk-form/js/jquery.tkAge.js"></script>
   <script src="/vendor/ttek/tk-table/js/jquery.tableOrderBy.js"></script>
 
   <script src="/vendor/ttek/tk-base/assets/js/core.js"></script>
