--- a/html/admin/login.html
+++ b/html/admin/login.html
@@ -17,8 +17,8 @@
 </head>
 <body id="login-page">
 
-	<div class="tk-admin-nav" choice="has-inst">
-		<a href="/login.html" title="Administrators"><i class="fa fa-graduation-cap"></i></a>
+	<div class="tk-admin-nav" choice="hasInst">
+		<a href="/xlogin.html" title="Administrators"><i class="fa fa-graduation-cap"></i></a>
 	</div>
 
 	<div class="container">
