--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -220,6 +220,7 @@
   <script src="/vendor/ttek/tk-base/assets/js/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
   <script src="/vendor/ttek/tk-form/js/dualListBox/jquery.dualListBox.js"></script>
   <script src="/vendor/ttek/tk-form/js/fileinput/jquery.tkFileInput.js"></script>
+<!--  <script src="/html/app//js/fileinput/jquery.tkFileInput.js"></script>-->
   <script src="/vendor/ttek/tk-form/js/jquery.tkInputLock.js"></script>
   <script src="/vendor/ttek/tk-table/js/jquery.tableOrderBy.js"></script>
 
