--- a/html/public/public.html
+++ b/html/public/public.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <title></title>
-
-  <link href="/html/app/img/favicon-152.png" rel="apple-touch-icon-precomposed" />
-  <link href="/html/app/img/favicon.ico" rel="icon" type="image/x-icon" />
+  
+  <link href="/html/app/img/favicon.png" rel="apple-touch-icon-precomposed" />
+  <link href="/html/app/img/favicon.ico" type="image/x-icon" rel="shortcut icon" />
 
   <link href="https://d2h9b02ioca40d.cloudfront.net/v7.0.1/uom.css" rel="stylesheet" />
   <link href="./custom.scss" rel="stylesheet" />
