--- a/html/public/public.html
+++ b/html/public/public.html
@@ -56,7 +56,7 @@
 
           <!-- Log in -->
           <li class="nav-item ms-lg-auto">
-            <a class="btn btn-primary me-2 me-lg-0" href="/login.html">Log in</a>
+            <a class="btn btn-primary me-2 me-lg-0" href="/login.html" var="loginUrl">Log in</a>
           </li>
           <!-- End Log in -->
         </ul>
@@ -69,9 +69,9 @@
 <!-- ========== END HEADER ========== -->
 
 <!-- ========== MAIN CONTENT ========== -->
-<div choice="alerts"><div var="alerts"></div></div>
-<main id="content" role="main" var="content">
-
+<main id="content" role="main">
+  <div class="container" choice="alerts"><div var="alerts"></div></div>
+  <div var="content"></div>
 </main>
 <!-- ========== END MAIN CONTENT ========== -->
 
