--- a/html/public/public.html
+++ b/html/public/public.html
@@ -100,7 +100,7 @@
 
           <!-- List -->
           <ul class="list-unstyled list-py-1 mb-0">
-            <li><a class="link link-light link-light-75" href="/contact.html">Support <i class="bi-box-arrow-up-right ms-1"></i></a></li>
+            <li><a class="link link-light link-light-75" href="/contact.html">Support</a></li>
             <!--            <li><a class="link link-light link-light-75" href="#">API</a></li>-->
           </ul>
           <!-- End List -->
@@ -112,7 +112,7 @@
 
           <!-- List -->
           <ul class="list-unstyled list-py-1 mb-0">
-            <li><a class="link link-light link-light-75" href="https://www.tropotek.com.au/">Tropotek <i class="bi-box-arrow-up-right ms-1"></i></a></li>
+            <li><a class="link link-light link-light-75" href="https://www.tropotek.com.au/" target="_blank">Tropotek <i class="bi-box-arrow-up-right ms-1"></i></a></li>
           </ul>
           <!-- End List -->
         </div>
@@ -123,7 +123,7 @@
 
           <!-- List -->
           <ul class="list-unstyled list-py-1 mb-0">
-            <li><a class="link link-light link-light-75" href="#">Documentation</a></li>
+            <li><a class="link link-light link-light-75" href="#">Documentation <i class="bi-box-arrow-up-right ms-1"></i></a></li>
           </ul>
           <!-- End List -->
         </div>
@@ -158,26 +158,26 @@
               </div>
             </a></li>
 
-            <li><a class="link link-light link-light-75" href="https://www.facebook.com/tropotek.com.au">
+            <li><a class="link link-light link-light-75" href="https://www.facebook.com/tropotek.com.au" target="_blank">
               <div class="d-flex">
                 <div class="flex-shrink-0">
                   <i class="bi-facebook"></i>
                 </div>
 
                 <div class="flex-grow-1 ms-2">
-                  <span>Facebook</span>
+                  <span>Facebook  <i class="bi-box-arrow-up-right ms-1"></i></span>
                 </div>
               </div>
             </a></li>
 
-            <li><a class="link link-light link-light-75" href="https://www.linkedin.com/in/tropotek/">
+            <li><a class="link link-light link-light-75" href="https://www.linkedin.com/in/tropotek/" target="_blank">
               <div class="d-flex">
                 <div class="flex-shrink-0">
                   <i class="bi-linkedin"></i>
                 </div>
 
                 <div class="flex-grow-1 ms-2">
-                  <span>Linkedin</span>
+                  <span>Linkedin  <i class="bi-box-arrow-up-right ms-1"></i></span>
                 </div>
               </div>
             </a></li>
