--- a/html/public/public.html
+++ b/html/public/public.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <!-- Title -->
-  <title>APD - Anatomic Pathology Database - Tropotek</title>
+  <title></title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/favicon.ico" />
