added company info panel

--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -60,12 +60,12 @@
             <ul class="dropdown-menu">
               <li class="item">
                 <a href="/staff/pathCaseEdit.html?type=necropsy">
-                  <i class="fa fa-paw"></i> New Necropsy Case
+                  <i class="fa fa-heart"></i> New Necropsy Case
                 </a>
               </li>
               <li class="item">
                 <a href="/staff/pathCaseEdit.html?type=biopsy">
-                  <i class="fa fa-paw"></i> New Biopsy Case
+                  <i class="fa fa-heartbeat"></i> New Biopsy Case
                 </a>
               </li>
             </ul>
