--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -55,7 +55,7 @@
 
           <li class="dropdown d-none d-md-block" choice="isStaff">
             <a class="btn dropdown-toggle" data-toggle="dropdown">
-              Create New Case
+              Create Case
             </a>
             <ul class="dropdown-menu">
               <li class="item">
